<resources>
    <string name="app_name">Group_F1_InClass07</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_num">Phone Number</string>
    <string name="phone_type">Phone Type</string>
    <string name="id">ID</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error... Make sure all fields are filled!!</string>
    <string name="update">Update</string>


</resources>